# SIEPL-Theme

./: .gitignore  README.md  pyproject.toml
.git.backup/: index
.git.backup/logs/: HEAD
.git.backup/logs/refs/heads/: develop
.git.backup/refs/heads/: develop
css/: siepl_theme.css
siepl_theme/: hooks.py  modules.txt
siepl_theme/fixtures/: color.json  website_theme.json
siepl_theme/locale/en/: LC_MESSAGES.json  siepl_rebrand.csv
siepl_theme/overrides/: login.py
siepl_theme/public/css/: custom_login.css  custom_login.css.BACKUP_20251204_111543  login.css  siepl_theme.css
siepl_theme/public/js/: custom_login.js  hide_browse_apps.js  hide_help.js  sidebar_rebrand.js
siepl_theme/templates/frappe/: login.html
siepl_theme/templates/includes/footer/: footer.html
siepl_theme/templates/overrides/: login.html
siepl_theme/templates/pages/: login.custom_backup.html
siepl_theme/translations/: en.csv
